# zero-scribe

./: .gitignore  README.md  ZeroScribe_Architecture.md  audio.py  config.py  file.py  formatting.py  main.py  models.py  notes.py  pyproject.toml  service.py  transcription.py  utils.py
docs/: blackhole-setup.md  development-journal.md
tests/: test_file.py  test_formatting.py  test_main.py
